--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -21,6 +21,7 @@
     "- [Introduction](#intro)\n",
     "-[Prelimary Investigation](#investigation)\n",
     "- [Data Wrangling](#wrangling)\n",
+    "- [Feature Engineering](#engineering)\n",
     "- [Univariate Exploration](#univariate)\n",
     "- [Bivariate Exploration](#bivariate)\n",
     "- [Multivariate Exploration](#multivariate)\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +283,7 @@
        "4          Male                     Yes  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +303,7 @@
        "(183412, 16)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +324,7 @@
        "array(['No', 'Yes'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +400,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -426,13 +427,84 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.duplicated().sum ()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id ='wrangling'>Data Wrangling</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking for missing values "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "duration_sec               0.000000\n",
+       "start_time                 0.000000\n",
+       "end_time                   0.000000\n",
+       "start_station_id           0.107408\n",
+       "start_station_name         0.107408\n",
+       "start_station_latitude     0.000000\n",
+       "start_station_longitude    0.000000\n",
+       "end_station_id             0.107408\n",
+       "end_station_name           0.107408\n",
+       "end_station_latitude       0.000000\n",
+       "end_station_longitude      0.000000\n",
+       "bike_id                    0.000000\n",
+       "user_type                  0.000000\n",
+       "member_birth_year          4.506248\n",
+       "member_gender              4.506248\n",
+       "bike_share_for_all_trip    0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the percentage of missing values\n",
+    "\n",
+    "(df.isna().sum() / df.shape[0]) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fill missing values with the mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in ['start_station_id', 'end_station_id', 'member_birth_year', 'member_gender' , 'end_station_name', 'start_station_name']:\n",
+    "    df[col] = df[col].fillna(df[col].mode()[0])\n",
+    "    \n",
+    "df['member_gender'] = df['member_gender'].fillna(\"Male\")"
    ]
   },
   {
@@ -449,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <a id='wrangling'>Data Wrangling</a>"
+    "## <a id='engineering'>Feature Engineering</a>"
    ]
   },
   {
@@ -461,33 +533,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project 3/notebook.ipynb Cell 19\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project%203/notebook.ipynb#ch0000018?line=0'>1</a>\u001b[0m \u001b[39m# convert start_time and end_time to datetime format\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project%203/notebook.ipynb#ch0000018?line=1'>2</a>\u001b[0m df\u001b[39m.\u001b[39mstart_time \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_datetime(df\u001b[39m.\u001b[39m start_time)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project%203/notebook.ipynb#ch0000018?line=2'>3</a>\u001b[0m df\u001b[39m.\u001b[39mend_time \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mto_datetime(df\u001b[39m.\u001b[39mend_time)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/eben-success/Desktop/Local/Udacity/Udacity/Udacity_Data_Analysis_Projects/Project%203/notebook.ipynb#ch0000018?line=4'>5</a>\u001b[0m \u001b[39m# convert the start_station_id and end_stattion_id to strings\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# convert start_time and end_time to datetime format\n",
     "df.start_time = pd.to_datetime(df. start_time)\n",
     "df.end_time = pd.to_datetime(df.end_time)\n",
     "\n",
     "# convert the start_station_id and end_stattion_id to strings\n",
-    "df.start_station_id = df.start_station_id.astype('str')\n",
+    "df.start_station_id = df.start_station_id.astype(str)\n",
     "\n",
-    "df.end_station_id = df.end_station_id.astype('str')\n",
+    "df.end_station_id = df.end_station_id.astype(str)\n",
     "\n",
     "# convert the bike_id to string\n",
-    "df.bike_id = df.bike_id.astype('str')\n",
+    "df.bike_id = df.bike_id.astype(str)\n",
     "\n",
     "# convert the user type and member_gender to categories\n",
     "df.user_type = df.user_type.astype('category')\n",
@@ -497,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -539,64 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Filling in Missing Values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "duration_sec               0.000000\n",
-       "start_time                 0.000000\n",
-       "end_time                   0.000000\n",
-       "start_station_id           0.000000\n",
-       "start_station_name         0.107408\n",
-       "start_station_latitude     0.000000\n",
-       "start_station_longitude    0.000000\n",
-       "end_station_id             0.000000\n",
-       "end_station_name           0.107408\n",
-       "end_station_latitude       0.000000\n",
-       "end_station_longitude      0.000000\n",
-       "bike_id                    0.000000\n",
-       "user_type                  0.000000\n",
-       "member_birth_year          4.506248\n",
-       "member_gender              4.506248\n",
-       "bike_share_for_all_trip    0.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Find the percentage of missing values\n",
-    "\n",
-    "(df.isna().sum() / df.shape[0]) * 100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Fill the missing values with the mode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in ['start_station_id', 'end_station_id', 'member_birth_year', 'member_gender' , 'end_station_name', 'start_station_name']:\n",
-    "    df[col] = df[col].fillna(df[col].mode()[0])\n",
-    "    \n",
-    "df['member_gender'] = df['member_gender'].fillna(\"Male\")"
    ]
   },
   {
@@ -608,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +636,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature Engineering"
+    "## Feature Engineering"
    ]
   },
   {
@@ -735,13 +738,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: line 1: Part_II_Filename: No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "# Use this command if you are running this file in local\n",
     "!jupyter nbconvert <Part_II_Filename>.ipynb --to slides --post serve --no-input --no-prompt"
