--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "4          Male                     Yes  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "(183412, 16)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "array(['No', 'Yes'], dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -573,17 +573,17 @@
       " 1   start_time               183412 non-null  datetime64[ns]\n",
       " 2   end_time                 183412 non-null  datetime64[ns]\n",
       " 3   start_station_id         183412 non-null  object        \n",
-      " 4   start_station_name       183215 non-null  object        \n",
+      " 4   start_station_name       183412 non-null  object        \n",
       " 5   start_station_latitude   183412 non-null  float64       \n",
       " 6   start_station_longitude  183412 non-null  float64       \n",
       " 7   end_station_id           183412 non-null  object        \n",
-      " 8   end_station_name         183215 non-null  object        \n",
+      " 8   end_station_name         183412 non-null  object        \n",
       " 9   end_station_latitude     183412 non-null  float64       \n",
       " 10  end_station_longitude    183412 non-null  float64       \n",
       " 11  bike_id                  183412 non-null  object        \n",
       " 12  user_type                183412 non-null  category      \n",
-      " 13  member_birth_year        175147 non-null  float64       \n",
-      " 14  member_gender            175147 non-null  category      \n",
+      " 13  member_birth_year        183412 non-null  float64       \n",
+      " 14  member_gender            183412 non-null  category      \n",
       " 15  bike_share_for_all_trip  183412 non-null  object        \n",
       "dtypes: category(2), datetime64[ns](2), float64(5), int64(1), object(6)\n",
       "memory usage: 19.9+ MB\n"
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,40 +644,6 @@
    "source": [
     "(df.isna().sum() / df.shape[0]) * 100"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Feature Engineering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binsize = 500\n",
-    "bins = np.arrange(0, df['duration_sec'].max()+ binsize,  binsize)\n",
-    "\n",
-    "plt.figure(figsize=[8,5])\n",
-    "plt.hist(data = df, x ='duration')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -729,6 +695,27 @@
     "\n",
     "> **Rubric Tip**: All plots in the slideshow are polished, meaning all plots have a title, labeled x/y axes (with units), x/y ticks, and legends. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I willl start off with univariate distribution and visualize the relationship between variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -793,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
