convert secs to mins

--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -646,18 +646,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "I will convert the duration_secs in seconds to duration_mins in minutes so that it would look more friendly. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['duration_min'] = (df['duration_sec'] / 60)\n",
+    "df['duration_min'] = df['duration_min'].astype(int)\n",
+    "\n",
+    "# Dropping the duration_sec columns\n",
+    "\n",
+    "df.drop(['duration_sec'], axis=1, inplace=True)\n"
+   ]
   },
   {
    "cell_type": "code",
