--- a/Project 3/notebook.ipynb
+++ b/Project 3/notebook.ipynb
@@ -654,6 +654,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 183412 entries, 0 to 183411\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                   Non-Null Count   Dtype         \n",
+      "---  ------                   --------------   -----         \n",
+      " 0   start_time               183412 non-null  datetime64[ns]\n",
+      " 1   end_time                 183412 non-null  datetime64[ns]\n",
+      " 2   start_station_id         183412 non-null  object        \n",
+      " 3   start_station_name       183412 non-null  object        \n",
+      " 4   start_station_latitude   183412 non-null  float64       \n",
+      " 5   start_station_longitude  183412 non-null  float64       \n",
+      " 6   end_station_id           183412 non-null  object        \n",
+      " 7   end_station_name         183412 non-null  object        \n",
+      " 8   end_station_latitude     183412 non-null  float64       \n",
+      " 9   end_station_longitude    183412 non-null  float64       \n",
+      " 10  bike_id                  183412 non-null  object        \n",
+      " 11  user_type                183412 non-null  category      \n",
+      " 12  member_birth_year        183412 non-null  float64       \n",
+      " 13  member_gender            183412 non-null  category      \n",
+      " 14  bike_share_for_all_trip  183412 non-null  object        \n",
+      " 15  duration_min             183412 non-null  int64         \n",
+      "dtypes: category(2), datetime64[ns](2), float64(5), int64(1), object(6)\n",
+      "memory usage: 19.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
@@ -667,18 +706,413 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Since the member_birth_year is given, I would calculate the member's present age"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['member_age'] = 2021 - df['member_birth_year']\n",
+    "\n",
+    "# converting member age from float to int\n",
+    "\n",
+    "df['member_age'] = df['member_age'].astype(int)\n",
+    "\n",
+    "df.drop(columns=['member_birth_year'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    183412.000000\n",
+       "mean         36.049653\n",
+       "std           9.908290\n",
+       "min          20.000000\n",
+       "25%          29.000000\n",
+       "50%          33.000000\n",
+       "75%          40.000000\n",
+       "max         143.000000\n",
+       "Name: member_age, dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['member_age'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the description above, the maximum age is 143, which is abnormal, I will drop ages which exceeds 100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_latitude</th>\n",
+       "      <th>start_station_longitude</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_latitude</th>\n",
+       "      <th>end_station_longitude</th>\n",
+       "      <th>bike_id</th>\n",
+       "      <th>user_type</th>\n",
+       "      <th>member_gender</th>\n",
+       "      <th>bike_share_for_all_trip</th>\n",
+       "      <th>duration_min</th>\n",
+       "      <th>member_age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1285</th>\n",
+       "      <td>2019-02-28 19:29:17.627</td>\n",
+       "      <td>2019-02-28 19:31:45.967</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>Shattuck Ave at Telegraph Ave</td>\n",
+       "      <td>37.833279</td>\n",
+       "      <td>-122.263490</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>Shattuck Ave at 55th St</td>\n",
+       "      <td>37.840364</td>\n",
+       "      <td>-122.264488</td>\n",
+       "      <td>5391</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10827</th>\n",
+       "      <td>2019-02-27 19:21:34.436</td>\n",
+       "      <td>2019-02-27 19:43:30.008</td>\n",
+       "      <td>343.0</td>\n",
+       "      <td>Bryant St at 2nd St</td>\n",
+       "      <td>37.783172</td>\n",
+       "      <td>-122.393572</td>\n",
+       "      <td>375.0</td>\n",
+       "      <td>Grove St at Masonic Ave</td>\n",
+       "      <td>37.774836</td>\n",
+       "      <td>-122.446546</td>\n",
+       "      <td>6249</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16087</th>\n",
+       "      <td>2019-02-27 08:37:36.864</td>\n",
+       "      <td>2019-02-27 08:56:28.022</td>\n",
+       "      <td>375.0</td>\n",
+       "      <td>Grove St at Masonic Ave</td>\n",
+       "      <td>37.774836</td>\n",
+       "      <td>-122.446546</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>Folsom St at 3rd St</td>\n",
+       "      <td>37.783830</td>\n",
+       "      <td>-122.398870</td>\n",
+       "      <td>4968</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17981</th>\n",
+       "      <td>2019-02-26 19:53:38.528</td>\n",
+       "      <td>2019-02-26 19:59:44.968</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>2nd St at Townsend St</td>\n",
+       "      <td>37.780526</td>\n",
+       "      <td>-122.390288</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Montgomery St BART Station (Market St at 2nd St)</td>\n",
+       "      <td>37.789625</td>\n",
+       "      <td>-122.400811</td>\n",
+       "      <td>5226</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18885</th>\n",
+       "      <td>2019-02-26 17:48:59.016</td>\n",
+       "      <td>2019-02-26 17:56:11.370</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Montgomery St BART Station (Market St at 2nd St)</td>\n",
+       "      <td>37.789625</td>\n",
+       "      <td>-122.400811</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>2nd St at Townsend St</td>\n",
+       "      <td>37.780526</td>\n",
+       "      <td>-122.390288</td>\n",
+       "      <td>5319</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171996</th>\n",
+       "      <td>2019-02-03 17:33:54.607</td>\n",
+       "      <td>2019-02-03 17:56:42.949</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>2nd St at Folsom St</td>\n",
+       "      <td>37.785000</td>\n",
+       "      <td>-122.395936</td>\n",
+       "      <td>375.0</td>\n",
+       "      <td>Grove St at Masonic Ave</td>\n",
+       "      <td>37.774836</td>\n",
+       "      <td>-122.446546</td>\n",
+       "      <td>4988</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173711</th>\n",
+       "      <td>2019-02-03 09:45:30.464</td>\n",
+       "      <td>2019-02-03 10:02:04.169</td>\n",
+       "      <td>375.0</td>\n",
+       "      <td>Grove St at Masonic Ave</td>\n",
+       "      <td>37.774836</td>\n",
+       "      <td>-122.446546</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>Folsom St at 3rd St</td>\n",
+       "      <td>37.783830</td>\n",
+       "      <td>-122.398870</td>\n",
+       "      <td>5445</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177708</th>\n",
+       "      <td>2019-02-01 19:09:28.387</td>\n",
+       "      <td>2019-02-01 19:34:55.963</td>\n",
+       "      <td>343.0</td>\n",
+       "      <td>Bryant St at 2nd St</td>\n",
+       "      <td>37.783172</td>\n",
+       "      <td>-122.393572</td>\n",
+       "      <td>375.0</td>\n",
+       "      <td>Grove St at Masonic Ave</td>\n",
+       "      <td>37.774836</td>\n",
+       "      <td>-122.446546</td>\n",
+       "      <td>5286</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177885</th>\n",
+       "      <td>2019-02-01 18:38:40.471</td>\n",
+       "      <td>2019-02-01 18:47:18.392</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Howard St at 2nd St</td>\n",
+       "      <td>37.787522</td>\n",
+       "      <td>-122.397405</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>San Francisco Caltrain (Townsend St at 4th St)</td>\n",
+       "      <td>37.776598</td>\n",
+       "      <td>-122.395282</td>\n",
+       "      <td>2175</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182830</th>\n",
+       "      <td>2019-02-01 07:45:05.934</td>\n",
+       "      <td>2019-02-01 07:52:14.922</td>\n",
+       "      <td>284.0</td>\n",
+       "      <td>Yerba Buena Center for the Arts (Howard St at ...</td>\n",
+       "      <td>37.784872</td>\n",
+       "      <td>-122.400876</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>San Francisco Caltrain Station 2  (Townsend St...</td>\n",
+       "      <td>37.776639</td>\n",
+       "      <td>-122.395526</td>\n",
+       "      <td>5031</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>75 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    start_time                end_time start_station_id  \\\n",
+       "1285   2019-02-28 19:29:17.627 2019-02-28 19:31:45.967            158.0   \n",
+       "10827  2019-02-27 19:21:34.436 2019-02-27 19:43:30.008            343.0   \n",
+       "16087  2019-02-27 08:37:36.864 2019-02-27 08:56:28.022            375.0   \n",
+       "17981  2019-02-26 19:53:38.528 2019-02-26 19:59:44.968             50.0   \n",
+       "18885  2019-02-26 17:48:59.016 2019-02-26 17:56:11.370             21.0   \n",
+       "...                        ...                     ...              ...   \n",
+       "171996 2019-02-03 17:33:54.607 2019-02-03 17:56:42.949             37.0   \n",
+       "173711 2019-02-03 09:45:30.464 2019-02-03 10:02:04.169            375.0   \n",
+       "177708 2019-02-01 19:09:28.387 2019-02-01 19:34:55.963            343.0   \n",
+       "177885 2019-02-01 18:38:40.471 2019-02-01 18:47:18.392             25.0   \n",
+       "182830 2019-02-01 07:45:05.934 2019-02-01 07:52:14.922            284.0   \n",
+       "\n",
+       "                                       start_station_name  \\\n",
+       "1285                        Shattuck Ave at Telegraph Ave   \n",
+       "10827                                 Bryant St at 2nd St   \n",
+       "16087                             Grove St at Masonic Ave   \n",
+       "17981                               2nd St at Townsend St   \n",
+       "18885    Montgomery St BART Station (Market St at 2nd St)   \n",
+       "...                                                   ...   \n",
+       "171996                                2nd St at Folsom St   \n",
+       "173711                            Grove St at Masonic Ave   \n",
+       "177708                                Bryant St at 2nd St   \n",
+       "177885                                Howard St at 2nd St   \n",
+       "182830  Yerba Buena Center for the Arts (Howard St at ...   \n",
+       "\n",
+       "        start_station_latitude  start_station_longitude end_station_id  \\\n",
+       "1285                 37.833279              -122.263490          173.0   \n",
+       "10827                37.783172              -122.393572          375.0   \n",
+       "16087                37.774836              -122.446546           36.0   \n",
+       "17981                37.780526              -122.390288           21.0   \n",
+       "18885                37.789625              -122.400811           50.0   \n",
+       "...                        ...                      ...            ...   \n",
+       "171996               37.785000              -122.395936          375.0   \n",
+       "173711               37.774836              -122.446546           36.0   \n",
+       "177708               37.783172              -122.393572          375.0   \n",
+       "177885               37.787522              -122.397405           30.0   \n",
+       "182830               37.784872              -122.400876           67.0   \n",
+       "\n",
+       "                                         end_station_name  \\\n",
+       "1285                              Shattuck Ave at 55th St   \n",
+       "10827                             Grove St at Masonic Ave   \n",
+       "16087                                 Folsom St at 3rd St   \n",
+       "17981    Montgomery St BART Station (Market St at 2nd St)   \n",
+       "18885                               2nd St at Townsend St   \n",
+       "...                                                   ...   \n",
+       "171996                            Grove St at Masonic Ave   \n",
+       "173711                                Folsom St at 3rd St   \n",
+       "177708                            Grove St at Masonic Ave   \n",
+       "177885     San Francisco Caltrain (Townsend St at 4th St)   \n",
+       "182830  San Francisco Caltrain Station 2  (Townsend St...   \n",
+       "\n",
+       "        end_station_latitude  end_station_longitude bike_id   user_type  \\\n",
+       "1285               37.840364            -122.264488    5391  Subscriber   \n",
+       "10827              37.774836            -122.446546    6249  Subscriber   \n",
+       "16087              37.783830            -122.398870    4968  Subscriber   \n",
+       "17981              37.789625            -122.400811    5226  Subscriber   \n",
+       "18885              37.780526            -122.390288    5319  Subscriber   \n",
+       "...                      ...                    ...     ...         ...   \n",
+       "171996             37.774836            -122.446546    4988  Subscriber   \n",
+       "173711             37.783830            -122.398870    5445  Subscriber   \n",
+       "177708             37.774836            -122.446546    5286  Subscriber   \n",
+       "177885             37.776598            -122.395282    2175  Subscriber   \n",
+       "182830             37.776639            -122.395526    5031  Subscriber   \n",
+       "\n",
+       "       member_gender bike_share_for_all_trip  duration_min  member_age  \n",
+       "1285            Male                     Yes             0         121  \n",
+       "10827           Male                      No             0         121  \n",
+       "16087           Male                      No             0         121  \n",
+       "17981           Male                      No             0         101  \n",
+       "18885           Male                      No             0         101  \n",
+       "...              ...                     ...           ...         ...  \n",
+       "171996          Male                      No             0         121  \n",
+       "173711          Male                      No             0         121  \n",
+       "177708          Male                      No             0         121  \n",
+       "177885        Female                      No             0         119  \n",
+       "182830          Male                      No             0         120  \n",
+       "\n",
+       "[75 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking for ages abover 100 years\n",
+    "\n",
+    "df.query('member_age > 100')"
+   ]
   },
   {
    "cell_type": "markdown",
